Fixed product management page layout issue

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -105,6 +105,8 @@
 
 .btn-toolbar .btn {
   margin-left: 0.5rem;
+  margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
 }
 
 /* --------- Forms --------- */
